Call Reformat Code